--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil|Archivo+Black|Cutive+Mono|Frank+Ruhl+Libre|Geo|Lekton|Montserrat+Subrayada|Oxygen+Mono|Questrial|Space+Mono|Tenor+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:300,400,600" rel="stylesheet">
+    <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
     <title>Colmar Academy</title>
 
   </head>
@@ -19,7 +21,7 @@
 
 <!-- HEADER -->
 
-    <header class="outer-container">
+    <header class="outer-container even" id="outer-header">
       <div class="container" id="header">
 
           <div class="logo-title">
@@ -27,7 +29,7 @@
             <a class="mobile-only" href="#"><img src="resources/images/ic-on-campus.svg"></a>
             <a class="mobile-only" href="#"><img src="resources/images/ic-online.svg"></a>
             <a class="mobile-only" href="#"><img src="resources/images/ic-login.svg"></a>
-            <h4 class="desktop-only">COLMAR</h4>
+            <h4 class="desktop-only colmar">COLMAR</h4>
             <h4 class="desktop-only">ACADEMY</h4>
           </div>
           <nav class="menu desktop-only">
@@ -42,10 +44,13 @@
 
 <!-- BANNER -->
 
-    <div class="outer-container">
+    <div class="outer-container even" id="outer-banner">
       <div class="container banner" id="banner">
         <div class="left-box">
-          <img src="resources/images/banner.jpg">
+          <div class="image-container">
+            <img src="resources/images/banner.jpg">
+          </div>
+
         </div>
         <div class="right-box">
           <div class="banner-text">
@@ -61,7 +66,7 @@
 
 <!-- First Feature -->
 
-    <div class="outer-container">
+    <div class="outer-container odd" id="outer-practice">
       <div class="container" id="practice">
         <div class="left-box" id="mobile-practice">
           <div class="information-main">
@@ -105,7 +110,7 @@
 
 <!-- Subjects Feature -->
 
-    <div class="outer-container">
+    <div class="outer-container even" id="outer-courses">
       <div class="container courses" id="courses">
         <div class="course-heading">
           <h2>Start learning</h2>
@@ -174,7 +179,7 @@
 
 <!-- Thesis TITLE -->
 
-<div class="outer-container">
+<div class="outer-container odd">
   <div class="container thesis-title" id="thesis-title">
     <h2>Thesis exhibit</h2>
   </div>
@@ -182,7 +187,7 @@
 
 <!-- Thesis Feature -->
 
-    <div class="outer-container">
+    <div class="outer-container odd">
       <div class="container" id="thesis-main">
         <div class="left-box">
 
@@ -204,8 +209,8 @@
           <div class="highlight-box">
             <img src="resources/images/thesis-now-and-then.jpg" alt="">
             <div class="feature-details">
-              <h3>Our campus</h3>
-              <p>Find which campus is close to you</p>
+              <h3>Now and then</h3>
+              <p>Research study about New York</p>
             </div>
           </div>
         </div>
@@ -214,7 +219,7 @@
 
 <!-- FOOTER -->
 
-    <footer class="outer-container">
+    <footer class="outer-container odd outer-foot">
       <div class="container" id="footer">
         <div class="copyright">
           <span>© 2016 Colmar Academy. All rights reserved.</span>
