--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil|Archivo+Black|Cutive+Mono|Frank+Ruhl+Libre|Geo|Lekton|Montserrat+Subrayada|Oxygen+Mono|Questrial|Space+Mono|Tenor+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:300,400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:300,400,600" rel="stylesheet">
     <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
     <title>Colmar Academy</title>
 
@@ -56,7 +55,7 @@
           <div class="banner-text">
             <h1>Learn something new every day</h1>
             <h3>Lorem ipsum dolar sit amet, consectetur adipiscing elit</h3>
-            <button type="button" name="start">Start here</button>
+            <a href="#"><button type="button" name="start">Start here</button></a>
           </div>
         </div>
       </div>
@@ -187,7 +186,7 @@
 
 <!-- Thesis Feature -->
 
-    <div class="outer-container odd">
+    <div class="outer-container odd" id="outer-thesis">
       <div class="container" id="thesis-main">
         <div class="left-box">
 
