--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="./resources/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./Resources/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="./Resources/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:300,400,600" rel="stylesheet">
-    <link rel="icon" href="./resources/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./Resources/images/favicon.ico" type="image/x-icon">
     <title>Colmar Academy</title>
 
   </head>
@@ -24,10 +24,10 @@
       <div class="container" id="header">
 
           <div class="logo-title">
-            <img src="resources/images/ic-logo.svg">
-            <a class="mobile-only" href="#"><img src="resources/images/ic-on-campus.svg"></a>
-            <a class="mobile-only" href="#"><img src="resources/images/ic-online.svg"></a>
-            <a class="mobile-only" href="#"><img src="resources/images/ic-login.svg"></a>
+            <img src="Resources/images/ic-logo.svg">
+            <a class="mobile-only" href="#"><img src="Resources/images/ic-on-campus.svg"></a>
+            <a class="mobile-only" href="#"><img src="Resources/images/ic-online.svg"></a>
+            <a class="mobile-only" href="#"><img src="Resources/images/ic-login.svg"></a>
             <h4 class="desktop-only colmar">COLMAR</h4>
             <h4 class="desktop-only">ACADEMY</h4>
           </div>
@@ -47,7 +47,7 @@
       <div class="container banner" id="banner">
         <div class="left-box">
           <div class="image-container">
-            <img src="resources/images/banner.jpg">
+            <img src="Resources/images/banner.jpg">
           </div>
 
         </div>
@@ -69,7 +69,7 @@
       <div class="container" id="practice">
         <div class="left-box" id="mobile-practice">
           <div class="information-main">
-            <img src="resources/images/information-main.jpg" alt="">
+            <img src="Resources/images/information-main.jpg" alt="">
             <h2>It doesn't hurt to keep practicing</h2>
             <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
             <span class="attribute">Emanuel, Sr Strategist at Hiring.com</span>
@@ -77,8 +77,8 @@
         </div>
         <div class="right-box">
           <div class="highlight-box">
-            <img class="desktop-only" src="resources/images/information-orientation.jpg" alt="">
-            <img class="mobile-only" src="resources/images/information-orientation-mobile.jpg" alt="">
+            <img class="desktop-only" src="Resources/images/information-orientation.jpg" alt="">
+            <img class="mobile-only" src="Resources/images/information-orientation-mobile.jpg" alt="">
             <div class="feature-details">
               <h3>Orientation date</h3>
               <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
@@ -86,8 +86,8 @@
             </div>
           </div>
           <div class="highlight-box">
-            <img class="desktop-only" src="resources/images/information-campus.jpg" alt="">
-            <img class="mobile-only" src="resources/images/information-campus-mobile.jpg" alt="">
+            <img class="desktop-only" src="Resources/images/information-campus.jpg" alt="">
+            <img class="mobile-only" src="Resources/images/information-campus-mobile.jpg" alt="">
             <div class="feature-details">
               <h3>Our campus</h3>
               <p>Find which campus is close to you</p>
@@ -95,8 +95,8 @@
             </div>
           </div>
           <div class="highlight-box">
-            <img class="desktop-only" src="resources/images/information-guest-lecture.jpg" alt="">
-            <img class="mobile-only" src="resources/images/information-guest-lecture-mobile.jpg" alt="">
+            <img class="desktop-only" src="Resources/images/information-guest-lecture.jpg" alt="">
+            <img class="mobile-only" src="Resources/images/information-guest-lecture-mobile.jpg" alt="">
             <div class="feature-details">
               <h3>Our guest lecture</h3>
               <p>Join a keynote with Olive Sack about music in medical treatment.</p>
@@ -119,7 +119,7 @@
 <!--INDIVIDUAL COURSE BOXES -->
 
           <div class="course">
-            <img src="resources/images/course-software.jpg" alt="">
+            <img src="Resources/images/course-software.jpg" alt="">
             <div class="course-detail">
               <h3>Software engineering</h3>
               <span class="course-heading">COURSES</span>
@@ -128,7 +128,7 @@
           </div>
 
           <div class="course">
-            <img src="resources/images/course-computer-art.jpg" alt="">
+            <img src="Resources/images/course-computer-art.jpg" alt="">
             <div class="course-detail">
               <h3>Computer Art</h3>
               <span class="course-heading">COURSES</span>
@@ -137,7 +137,7 @@
           </div>
 
           <div class="course">
-            <img src="resources/images/course-design.jpg" alt="">
+            <img src="Resources/images/course-design.jpg" alt="">
             <div class="course-detail">
               <h3>Design</h3>
               <span class="course-heading">COURSES</span>
@@ -146,7 +146,7 @@
           </div>
 
           <div class="course">
-            <img src="resources/images/course-data.jpg" alt="">
+            <img src="Resources/images/course-data.jpg" alt="">
             <div class="course-detail">
               <h3>Data</h3>
               <span class="course-heading">COURSES</span>
@@ -155,7 +155,7 @@
           </div>
 
           <div class="course">
-            <img src="resources/images/course-business.jpg" alt="">
+            <img src="Resources/images/course-business.jpg" alt="">
             <div class="course-detail">
               <h3>Business</h3>
               <span class="course-heading">COURSES</span>
@@ -164,7 +164,7 @@
           </div>
 
           <div class="course">
-            <img src="resources/images/course-marketing.jpg" alt="">
+            <img src="Resources/images/course-marketing.jpg" alt="">
             <div class="course-detail">
               <h3>Marketing</h3>
               <span class="course-heading">COURSES</span>
@@ -191,7 +191,7 @@
         <div class="left-box">
 
           <div class="thesis-video">
-              <video controls src="./resources/videos/thesis.mp4" type="video/mp4">
+              <video controls src="./Resources/videos/thesis.mp4" type="video/mp4">
               </video>
             <h4 class="desktop-only">Reimagine urban</h4>
             <p class="desktop-only">"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
@@ -199,14 +199,14 @@
         </div>
         <div class="right-box" id="hide-thesis">
           <div class="highlight-box">
-            <img src="resources/images/thesis-fisma.jpg" alt="">
+            <img src="Resources/images/thesis-fisma.jpg" alt="">
             <div class="feature-details">
               <h3>Fisma: Design and</h3>
               <p>Designer showcase of new prototype product</p>
             </div>
           </div>
           <div class="highlight-box">
-            <img src="resources/images/thesis-now-and-then.jpg" alt="">
+            <img src="Resources/images/thesis-now-and-then.jpg" alt="">
             <div class="feature-details">
               <h3>Now and then</h3>
               <p>Research study about New York</p>
