--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <div class="container" id="header">
 
           <div class="logo-title">
+            <object type="image/svg+xml" data="Resources/images/ic-logo.svg">
+              Your browser does not support SVG
+            </object>
             <img src="Resources/images/ic-logo.svg">
             <a class="mobile-only" href="#"><img src="Resources/images/ic-on-campus.svg"></a>
             <a class="mobile-only" href="#"><img src="Resources/images/ic-online.svg"></a>
