Replace SVG images with objects.

--- a/index.html
+++ b/index.html
@@ -27,10 +27,15 @@
             <object type="image/svg+xml" data="Resources/images/ic-logo.svg">
               Your browser does not support SVG
             </object>
-            <img src="Resources/images/ic-logo.svg">
-            <a class="mobile-only" href="#"><img src="Resources/images/ic-on-campus.svg"></a>
-            <a class="mobile-only" href="#"><img src="Resources/images/ic-online.svg"></a>
-            <a class="mobile-only" href="#"><img src="Resources/images/ic-login.svg"></a>
+            <a class="mobile-only" href="#"><object type="image/svg+xml" data="Resources/images/ic-on-campus.svg">
+              Your browser does not support SVG
+            </object></a>
+            <a class="mobile-only" href="#"><object type="image/svg+xml" data="Resources/images/ic-online.svg">
+              Your browser does not support SVG
+            </object></a>
+            <a class="mobile-only" href="#"><object type="image/svg+xml" data="Resources/images/ic-login.svg">
+              Your browser does not support SVG
+            </object></a>
             <h4 class="desktop-only colmar">COLMAR</h4>
             <h4 class="desktop-only">ACADEMY</h4>
           </div>
