Add accessibility features.

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
       <div class="container" id="header">
 
           <div class="logo-title">
-            <object type="image/svg+xml" data="Resources/images/ic-logo.svg">
+            <object role="image" type="image/svg+xml" data="Resources/images/ic-logo.svg" alt="company logo">
               Your browser does not support SVG
             </object>
-            <a class="mobile-only" href="#"><object type="image/svg+xml" data="Resources/images/ic-on-campus.svg">
+            <a class="mobile-only" href="#"><object role="image" type="image/svg+xml" data="Resources/images/ic-on-campus.svg" alt="on-campus link">
               Your browser does not support SVG
             </object></a>
-            <a class="mobile-only" href="#"><object type="image/svg+xml" data="Resources/images/ic-online.svg">
+            <a class="mobile-only" href="#"><object role="image" type="image/svg+xml" data="Resources/images/ic-online.svg" alt="online link">
               Your browser does not support SVG
             </object></a>
-            <a class="mobile-only" href="#"><object type="image/svg+xml" data="Resources/images/ic-login.svg">
+            <a class="mobile-only" href="#"><object role="image" type="image/svg+xml" data="Resources/images/ic-login.svg" alt="log in link">
               Your browser does not support SVG
             </object></a>
             <h4 class="desktop-only colmar">COLMAR</h4>
@@ -55,7 +55,7 @@
       <div class="container banner" id="banner">
         <div class="left-box">
           <div class="image-container">
-            <img src="Resources/images/banner.jpg">
+            <img src="Resources/images/banner.jpg" alt="students working together">
           </div>
 
         </div>
@@ -77,7 +77,7 @@
       <div class="container" id="practice">
         <div class="left-box" id="mobile-practice">
           <div class="information-main">
-            <img src="Resources/images/information-main.jpg" alt="">
+            <img src="Resources/images/information-main.jpg" alt="student reading">
             <h2>It doesn't hurt to keep practicing</h2>
             <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat, tristique ligula."</p>
             <span class="attribute">Emanuel, Sr Strategist at Hiring.com</span>
@@ -85,8 +85,8 @@
         </div>
         <div class="right-box">
           <div class="highlight-box">
-            <img class="desktop-only" src="Resources/images/information-orientation.jpg" alt="">
-            <img class="mobile-only" src="Resources/images/information-orientation-mobile.jpg" alt="">
+            <img class="desktop-only" src="Resources/images/information-orientation.jpg" alt="birds-eye view of people walking on a path.">
+            <img class="mobile-only" src="Resources/images/information-orientation-mobile.jpg" alt="birds-eye view of people walking on a path.">
             <div class="feature-details">
               <h3>Orientation date</h3>
               <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
@@ -94,8 +94,8 @@
             </div>
           </div>
           <div class="highlight-box">
-            <img class="desktop-only" src="Resources/images/information-campus.jpg" alt="">
-            <img class="mobile-only" src="Resources/images/information-campus-mobile.jpg" alt="">
+            <img class="desktop-only" src="Resources/images/information-campus.jpg" alt="students studying at desks in a room.">
+            <img class="mobile-only" src="Resources/images/information-campus-mobile.jpg" alt="students studying at desks in a room.">
             <div class="feature-details">
               <h3>Our campus</h3>
               <p>Find which campus is close to you</p>
@@ -103,8 +103,8 @@
             </div>
           </div>
           <div class="highlight-box">
-            <img class="desktop-only" src="Resources/images/information-guest-lecture.jpg" alt="">
-            <img class="mobile-only" src="Resources/images/information-guest-lecture-mobile.jpg" alt="">
+            <img class="desktop-only" src="Resources/images/information-guest-lecture.jpg" alt="Oliver Sack">
+            <img class="mobile-only" src="Resources/images/information-guest-lecture-mobile.jpg" alt="Oliver Sack">
             <div class="feature-details">
               <h3>Our guest lecture</h3>
               <p>Join a keynote with Olive Sack about music in medical treatment.</p>
@@ -127,7 +127,7 @@
 <!--INDIVIDUAL COURSE BOXES -->
 
           <div class="course">
-            <img src="Resources/images/course-software.jpg" alt="">
+            <img src="Resources/images/course-software.jpg" alt="computers on a desk.">
             <div class="course-detail">
               <h3>Software engineering</h3>
               <span class="course-heading">COURSES</span>
@@ -136,7 +136,7 @@
           </div>
 
           <div class="course">
-            <img src="Resources/images/course-computer-art.jpg" alt="">
+            <img src="Resources/images/course-computer-art.jpg" alt="a hand holding an iphone.">
             <div class="course-detail">
               <h3>Computer Art</h3>
               <span class="course-heading">COURSES</span>
@@ -145,7 +145,7 @@
           </div>
 
           <div class="course">
-            <img src="Resources/images/course-design.jpg" alt="">
+            <img src="Resources/images/course-design.jpg" alt="a person holding an analog film camera.">
             <div class="course-detail">
               <h3>Design</h3>
               <span class="course-heading">COURSES</span>
@@ -154,7 +154,7 @@
           </div>
 
           <div class="course">
-            <img src="Resources/images/course-data.jpg" alt="">
+            <img src="Resources/images/course-data.jpg" alt="laptop on a desk top displaying graphs and charts.">
             <div class="course-detail">
               <h3>Data</h3>
               <span class="course-heading">COURSES</span>
@@ -163,7 +163,7 @@
           </div>
 
           <div class="course">
-            <img src="Resources/images/course-business.jpg" alt="">
+            <img src="Resources/images/course-business.jpg" alt="close up of a chess board.">
             <div class="course-detail">
               <h3>Business</h3>
               <span class="course-heading">COURSES</span>
@@ -172,7 +172,7 @@
           </div>
 
           <div class="course">
-            <img src="Resources/images/course-marketing.jpg" alt="">
+            <img src="Resources/images/course-marketing.jpg" alt="one hand pointing at an apple watch on the other hand.">
             <div class="course-detail">
               <h3>Marketing</h3>
               <span class="course-heading">COURSES</span>
@@ -207,14 +207,14 @@
         </div>
         <div class="right-box" id="hide-thesis">
           <div class="highlight-box">
-            <img src="Resources/images/thesis-fisma.jpg" alt="">
+            <img src="Resources/images/thesis-fisma.jpg" alt="arial view of computer and a hand highlighting documents.">
             <div class="feature-details">
               <h3>Fisma: Design and</h3>
               <p>Designer showcase of new prototype product</p>
             </div>
           </div>
           <div class="highlight-box">
-            <img src="Resources/images/thesis-now-and-then.jpg" alt="">
+            <img src="Resources/images/thesis-now-and-then.jpg" alt="New York sky line.">
             <div class="feature-details">
               <h3>Now and then</h3>
               <p>Research study about New York</p>
